{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 12,
  "lineage": "16e3b56c-65fa-63e3-2822-3243d08abe71",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0f5ee92e2d63afc18",
            "arn": "arn:aws:ec2:ap-south-1:792557500634:instance/i-0468128057e5dbe05",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0468128057e5dbe05",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-041335271fa378014"
              }
            ],
            "primary_network_interface_id": "eni-041335271fa378014",
            "private_dns": "ip-10-0-1-80.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.80",
            "public_ip": "3.110.106.9",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d9449ec8cfa73668",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cd333f00e59a104a",
            "tags": {
              "Name": "jenkins-server"
            },
            "tags_all": {
              "Name": "jenkins-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0dbd25a4bfca56db2"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "792557500634",
            "id": "i-0468128057e5dbe05",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.trend_sg",
            "aws_subnet.trend_subnet",
            "aws_vpc.trend_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "trend_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:792557500634:internet-gateway/igw-0cf81a9e15f5402c8",
            "id": "igw-0cf81a9e15f5402c8",
            "owner_id": "792557500634",
            "region": "ap-south-1",
            "tags": {
              "Name": "trend-igw"
            },
            "tags_all": {
              "Name": "trend-igw"
            },
            "vpc_id": "vpc-0de42bf9cbdfa21c1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.trend_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "trend_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:792557500634:route-table/rtb-01569e162044e9cf7",
            "id": "rtb-01569e162044e9cf7",
            "owner_id": "792557500634",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cf81a9e15f5402c8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "trend-rt"
            },
            "tags_all": {
              "Name": "trend-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0de42bf9cbdfa21c1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "792557500634",
            "id": "rtb-01569e162044e9cf7",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.trend_igw",
            "aws_vpc.trend_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "trend_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aa1d75405f7d3daa",
            "region": "ap-south-1",
            "route_table_id": "rtb-01569e162044e9cf7",
            "subnet_id": "subnet-0cd333f00e59a104a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.trend_igw",
            "aws_route_table.trend_rt",
            "aws_subnet.trend_subnet",
            "aws_vpc.trend_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "trend_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:792557500634:security-group/sg-0dbd25a4bfca56db2",
            "description": "Allow Jenkins and App traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dbd25a4bfca56db2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "App",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Jenkins",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "trend-sg",
            "name_prefix": "",
            "owner_id": "792557500634",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "trend-sg"
            },
            "tags_all": {
              "Name": "trend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0de42bf9cbdfa21c1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "792557500634",
            "id": "sg-0dbd25a4bfca56db2",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.trend_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "trend_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:792557500634:subnet/subnet-0cd333f00e59a104a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cd333f00e59a104a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "792557500634",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "trend-subnet"
            },
            "tags_all": {
              "Name": "trend-subnet"
            },
            "vpc_id": "vpc-0de42bf9cbdfa21c1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "792557500634",
            "id": "subnet-0cd333f00e59a104a",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.trend_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "trend_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:792557500634:vpc/vpc-0de42bf9cbdfa21c1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06e184d63e65653b1",
            "default_route_table_id": "rtb-0b56e5294fe7e831f",
            "default_security_group_id": "sg-015c38e4026afcd70",
            "dhcp_options_id": "dopt-06d29f5b3842d2640",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0de42bf9cbdfa21c1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b56e5294fe7e831f",
            "owner_id": "792557500634",
            "region": "ap-south-1",
            "tags": {
              "Name": "trend-vpc"
            },
            "tags_all": {
              "Name": "trend-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "792557500634",
            "id": "vpc-0de42bf9cbdfa21c1",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}